# SaaS_Apps

./: README.md
.NET/: ReadME.md
.NET/FinTech_.NETAspire/: README.md
.NET/FinTech_MauiApp/: ReadME.md
.NET/WindowsAIDisable/: ReadME.md
AIApps/: ReadME.md
AIApps/AIDrivenDatasetIntelligencePlatformMVP/: ReadME.md
AIApps/AIDrivenDocumentIntelligencePlatformMVP/: readme.md
AIApps/CustomerSupportBotMVP/: readme.md
AIApps/DeepRiskAI/: readme.md
AIApps/EchoGuideAI/: readme.md
AIApps/FinConverseLLM/: readme.md
AIApps/FinLiteAI/: readme.md
AIApps/FinMLEngine/: readme.md
AIApps/FinTuneAI/: readme.md
AIApps/FinancialQEModelingPA/: ReadME.md  config.yaml
AIApps/HealthConnect/: readme.md
AIApps/LexiFinAI/: readme.md
AIApps/OptiLendAI/: readme.md
AIApps/PropIntelAI/: readme.md
AIApps/TrailBlazerAIMVP/: readme.md
AIApps/VisionLedgerAI/: readme.md
AgenticCoding/: README.md
AgenticCoding/Claude Sonnet/: README.md
AgenticCoding/MLPythonScikit-LearnRustLoanRecordAnalysis/: loan_analysis_report.py  readme.md  rust_loan_search.rs
FinTech_.NETAspire/: README.md
FinTech_MauiApp/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  FinTech_MauiApp.csproj  FinTech_MauiApp.sln  GlobalUsings.cs  MauiProgram.cs  README.md
FinTech_MauiApp/Data/: Constants.cs  (+6 more)
LangChainApps/: README.md
LowCodeAIApps/: README.md
NoCodeAIApps/: README.md
NodejsApps/: ReadME.md
VibeCoding/: README.md
VibeCoding/AngularRustLoanManagement/rust_api/: Cargo.toml
VibeCoding/AngularRustLoanManagement/rust_api/src/: handlers.rs  main.rs  models.rs  services.rs
(+75 files in other folders)
